Refactor frontend code for improved type safety and accessibility
- Replace forEach with for...of loops throughout Vue components
- Add explicit type annotations to catch blocks (any)
- Add proper labels with 'for' attributes to form inputs for accessibility
- Replace parseInt with Number.parseInt for consistency
- Replace String.replace with replaceAll where appropriate
- Replace window.location with globalThis.location
- Add readonly modifier to class properties where appropriate
- Add debug logging for error cases in requirement ID comparison
- Remove unused imports (RequirementLink)
- Convert non-interactive label to div element